force-app/main/default/objects/df_122_villkorat_arv__c/df_122_villkorat_arv__c.object-meta.xml
<CustomObject>
    <label>Villkorat arv</label>
    <nameField>
        <label>Villkorat arv Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Villkorat arvs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>