force-app/main/default/objects/df_122_villkorat_arv__c/fields/efternamn_srskild_frvaltare__c.field-meta.xml
<CustomField>
    <fullName>efternamn_srskild_frvaltare__c</fullName>
    <label>Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>