force-app/main/default/objects/df_122_villkorat_arv__c/fields/frnamn_srskild_frvaltare__c.field-meta.xml
<CustomField>
    <fullName>frnamn_srskild_frvaltare__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>