force-app/main/default/objects/df_122_villkorat_arv__c/fields/prioritet_srskild_frvaltare__c.field-meta.xml
<CustomField>
    <fullName>prioritet_srskild_frvaltare__c</fullName>
    <label>Prioritet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>